// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Responsibility can render a disable select 1`] = `
<label id="responsibilityField"
       class="o-forms-field ncf__validation-error"
       data-validate="required"
       for="responsibility"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Which best describes your job responsibility?
    </span>
  </span>
  <span class="o-forms-input o-forms-input--select">
    <select id="responsibility"
            name="responsibility"
            data-trackable="field-responsibility"
            aria-required="true"
            required
            disabled
    >
      <option value>
        Please select a job responsibility
      </option>
      <option value="FIN">
        Accounting/finance
      </option>
      <option value="ADL">
        Administration
      </option>
      <option value="RES">
        Broker/trader
      </option>
      <option value="BUY">
        Buying/procurement
      </option>
      <option value="EXP">
        Export/international sales
      </option>
      <option value="CON">
        General management
      </option>
      <option value="PAT">
        HR/Training
      </option>
      <option value="IFA">
        IFA/financial adviser
      </option>
      <option value="ITC">
        IT/computing
      </option>
      <option value="TEC">
        Information technology
      </option>
      <option value="INS">
        Insurance
      </option>
      <option value="KNO">
        Knowledge management
      </option>
      <option value="LEG">
        Legal/company secretarial
      </option>
      <option value="MKT">
        Marketing/communications/PR
      </option>
      <option value="MON">
        Money/portfolio management
      </option>
      <option value="OTH">
        N/A
      </option>
      <option value="NOT">
        Not working
      </option>
      <option value="OPS">
        Operations
      </option>
      <option value="PRI">
        Private Investor
      </option>
      <option value="PRO">
        Product mgmt/development
      </option>
      <option value="RAD">
        Research/analysis
      </option>
      <option value="RET">
        Retired
      </option>
      <option value="RSK">
        Risk management/compliance
      </option>
      <option value="SAL">
        Sales/business development
      </option>
      <option value="CPL">
        Strategy/planning
      </option>
      <option value="STU">
        Student
      </option>
      <option value="TEL">
        Telecommunications
      </option>
    </select>
    <span class="o-forms-input__error">
      Please select your responsibility
    </span>
  </span>
</label>
`;

exports[`Responsibility can render an error message 1`] = `
<label id="responsibilityField"
       class="o-forms-field ncf__validation-error"
       data-validate="required"
       for="responsibility"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Which best describes your job responsibility?
    </span>
  </span>
  <span class="o-forms-input o-forms-input--select o-forms-input--invalid">
    <select id="responsibility"
            name="responsibility"
            data-trackable="field-responsibility"
            aria-required="true"
            required
    >
      <option value>
        Please select a job responsibility
      </option>
      <option value="FIN">
        Accounting/finance
      </option>
      <option value="ADL">
        Administration
      </option>
      <option value="RES">
        Broker/trader
      </option>
      <option value="BUY">
        Buying/procurement
      </option>
      <option value="EXP">
        Export/international sales
      </option>
      <option value="CON">
        General management
      </option>
      <option value="PAT">
        HR/Training
      </option>
      <option value="IFA">
        IFA/financial adviser
      </option>
      <option value="ITC">
        IT/computing
      </option>
      <option value="TEC">
        Information technology
      </option>
      <option value="INS">
        Insurance
      </option>
      <option value="KNO">
        Knowledge management
      </option>
      <option value="LEG">
        Legal/company secretarial
      </option>
      <option value="MKT">
        Marketing/communications/PR
      </option>
      <option value="MON">
        Money/portfolio management
      </option>
      <option value="OTH">
        N/A
      </option>
      <option value="NOT">
        Not working
      </option>
      <option value="OPS">
        Operations
      </option>
      <option value="PRI">
        Private Investor
      </option>
      <option value="PRO">
        Product mgmt/development
      </option>
      <option value="RAD">
        Research/analysis
      </option>
      <option value="RET">
        Retired
      </option>
      <option value="RSK">
        Risk management/compliance
      </option>
      <option value="SAL">
        Sales/business development
      </option>
      <option value="CPL">
        Strategy/planning
      </option>
      <option value="STU">
        Student
      </option>
      <option value="TEL">
        Telecommunications
      </option>
    </select>
    <span class="o-forms-input__error">
      Please select your responsibility
    </span>
  </span>
</label>
`;

exports[`Responsibility can render an initial selected value 1`] = `
<label id="responsibilityField"
       class="o-forms-field ncf__validation-error"
       data-validate="required"
       for="responsibility"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Which best describes your job responsibility?
    </span>
  </span>
  <span class="o-forms-input o-forms-input--select">
    <select id="responsibility"
            name="responsibility"
            data-trackable="field-responsibility"
            aria-required="true"
            required
    >
      <option value>
        Please select a job responsibility
      </option>
      <option selected
              value="FIN"
      >
        Accounting/finance
      </option>
      <option value="ADL">
        Administration
      </option>
      <option value="RES">
        Broker/trader
      </option>
      <option value="BUY">
        Buying/procurement
      </option>
      <option value="EXP">
        Export/international sales
      </option>
      <option value="CON">
        General management
      </option>
      <option value="PAT">
        HR/Training
      </option>
      <option value="IFA">
        IFA/financial adviser
      </option>
      <option value="ITC">
        IT/computing
      </option>
      <option value="TEC">
        Information technology
      </option>
      <option value="INS">
        Insurance
      </option>
      <option value="KNO">
        Knowledge management
      </option>
      <option value="LEG">
        Legal/company secretarial
      </option>
      <option value="MKT">
        Marketing/communications/PR
      </option>
      <option value="MON">
        Money/portfolio management
      </option>
      <option value="OTH">
        N/A
      </option>
      <option value="NOT">
        Not working
      </option>
      <option value="OPS">
        Operations
      </option>
      <option value="PRI">
        Private Investor
      </option>
      <option value="PRO">
        Product mgmt/development
      </option>
      <option value="RAD">
        Research/analysis
      </option>
      <option value="RET">
        Retired
      </option>
      <option value="RSK">
        Risk management/compliance
      </option>
      <option value="SAL">
        Sales/business development
      </option>
      <option value="CPL">
        Strategy/planning
      </option>
      <option value="STU">
        Student
      </option>
      <option value="TEL">
        Telecommunications
      </option>
    </select>
    <span class="o-forms-input__error">
      Please select your responsibility
    </span>
  </span>
</label>
`;

exports[`Responsibility render a select with a label 1`] = `
<label id="responsibilityField"
       class="o-forms-field ncf__validation-error"
       data-validate="required"
       for="responsibility"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Which best describes your job responsibility?
    </span>
  </span>
  <span class="o-forms-input o-forms-input--select">
    <select id="responsibility"
            name="responsibility"
            data-trackable="field-responsibility"
            aria-required="true"
            required
    >
      <option value>
        Please select a job responsibility
      </option>
      <option value="FIN">
        Accounting/finance
      </option>
      <option value="ADL">
        Administration
      </option>
      <option value="RES">
        Broker/trader
      </option>
      <option value="BUY">
        Buying/procurement
      </option>
      <option value="EXP">
        Export/international sales
      </option>
      <option value="CON">
        General management
      </option>
      <option value="PAT">
        HR/Training
      </option>
      <option value="IFA">
        IFA/financial adviser
      </option>
      <option value="ITC">
        IT/computing
      </option>
      <option value="TEC">
        Information technology
      </option>
      <option value="INS">
        Insurance
      </option>
      <option value="KNO">
        Knowledge management
      </option>
      <option value="LEG">
        Legal/company secretarial
      </option>
      <option value="MKT">
        Marketing/communications/PR
      </option>
      <option value="MON">
        Money/portfolio management
      </option>
      <option value="OTH">
        N/A
      </option>
      <option value="NOT">
        Not working
      </option>
      <option value="OPS">
        Operations
      </option>
      <option value="PRI">
        Private Investor
      </option>
      <option value="PRO">
        Product mgmt/development
      </option>
      <option value="RAD">
        Research/analysis
      </option>
      <option value="RET">
        Retired
      </option>
      <option value="RSK">
        Risk management/compliance
      </option>
      <option value="SAL">
        Sales/business development
      </option>
      <option value="CPL">
        Strategy/planning
      </option>
      <option value="STU">
        Student
      </option>
      <option value="TEL">
        Telecommunications
      </option>
    </select>
    <span class="o-forms-input__error">
      Please select your responsibility
    </span>
  </span>
</label>
`;
